--- a/index.html
+++ b/index.html
@@ -7,20 +7,20 @@
 </head>
 <body>
 
-    <header> <!--La cabecera, va a contener el menú de mi página.-->
+    <header> <!--La cabecera, donde voy a contener el menú de la página.-->
             <nav> <!--Este elemento me va a definir un conjunto de enlaces de navegación, es para hacer un menú de navegación-->
                 <h1>Cac-Movies</h1> 
                 <!-- La etiqueta para definir el texto después del logo. 
                      La etiqueta h1 es un elemento en bloque, usa todo el ancho de la página.-->
                 <ul type="square">
                     <!-- Una lista de ítems desordenados.
-                    El atributo type="square" es para que la lista esté ordenada con cuadrados-->
+                    El atributo type="square" es para que la lista no posea círculos y esté ordenada con cuadrados-->
                     <li>Tendencias</li>
                     <li>
                         <a href="./register.html">Registrarse</a> 
-                        <!--La etiqueta a, de anchor ("ancor" o "ancla"), es para enlaces.
-                            En este caso, hay un enlace a una ruta relativa, interna a un archivo dentro de nuestro proyecto.
-                            Para hacer esto, dentro del href se escribe "./" y, a continuación, el nombre del archivo de nuestro directorio.-->
+                        <!--La etiqueta a, de anchor ("ancor" o "ancla"), es para crear enlaces.
+                            En este caso, un enlace a una ruta relativa o interna a un archivo dentro del proyecto.
+                            Para hacer esto, dentro del href escribir "./" y, a continuación, el nombre del archivo de nuestro directorio.-->
                     </li>
                     <li>
                         <a href="https://developer.themoviedb.org/docs"
@@ -30,8 +30,8 @@
                         </a>
                         <!--  
                         En este caso, hay un enlace externo a una ruta absoluta.   
-                        El atributo target="_blank" es para que el enlace que creamos se abra en otra pestaña.
-                        Y el atributo title="" sirve para que el navegador me muestre una pequeña descripción cuando pasamos el cursor sobre el enlace.-->
+                        El atributo target="_blank" es para que el enlace se abra en otra pestaña del navegador.
+                        Y el atributo title="" sirve para que el navegador nos muestre una pequeña descripción cuando pasamos el cursor sobre el enlace.-->
                     </li>
                     <li>Iniciar sesión</li>
                 </ul>
