--- a/index.html
+++ b/index.html
@@ -6,17 +6,17 @@
     <title>Cac-Movies</title>
 
     <link rel="Cac-Movies icon" href="./static/img/favicon.ico" type="image/x-icon">
-    <!-- Con la etiqueta link y la relación "icon", dentro del atributo rel, podemos establecer el favicon.ico para el logo de la pestaña. -->
-
+    <!-- Con la etiqueta link y la relación "icon" dentro del atributo rel, podemos establecer el favicon.ico para el logo de la pestaña. -->
 
 </head>
 <body>
 
-    <header> <!--La cabecera, donde voy a contener el menú de la página.-->
-            <nav> <!--Este elemento me va a definir un conjunto de enlaces de navegación, es para hacer un menú de navegación-->
+    <header> <!--La cabecera, donde contengo el menú de la página.-->
+            <nav> <!--Este elemento define un conjunto de enlaces de navegación, 
+                      sirve para hacer un menú de navegación con enlaces.-->
                 <h1>Cac-Movies</h1> 
                 <!-- La etiqueta para definir el texto después del logo. 
-                     La etiqueta h1 es un elemento en bloque, usa todo el ancho de la página.-->
+                     Esta etiqueta h1 es un elemento en bloque, usa todo el ancho de la página.-->
                 <ul type="square">
                     <!-- Una lista de ítems desordenados.
                     El atributo type="square" es para que la lista no posea círculos y esté ordenada con cuadrados-->
@@ -25,7 +25,7 @@
                         <a href="./register.html">Registrarse</a> 
                         <!--La etiqueta a, de anchor ("ancor" o "ancla"), es para crear enlaces.
                             En este caso, un enlace a una ruta relativa o interna a un archivo dentro del proyecto.
-                            Para hacer esto, dentro del href escribir "./" y, a continuación, el nombre del archivo de nuestro directorio.-->
+                            Para hacer esto, dentro del href escribir "./" y, a continuación, la ubicación y el nombbre del archivo del enlace en nuestro directorio.-->
                     </li>
                     <li>
                         <a href="https://developer.themoviedb.org/docs"
