--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <li>
                         <a href="./register.html">Registrarse</a> 
                         <!--La etiqueta a, de anchor ("ancor" o "ancla"), es para crear enlaces.
-                            En este caso, un enlace a una ruta relativa o interna a un archivo dentro del proyecto.
+                            En este caso, un enlace relativo a una ruta interna a un archivo dentro del proyecto.
                             Para hacer esto, dentro del href escribir "./" y, a continuación, la ubicación y el nombbre del archivo del enlace en nuestro directorio.-->
                     </li>
                     <li>
