--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <header> <!--La cabecera, donde contengo el menú de la página.-->
             <nav> <!--Este elemento define un conjunto de enlaces de navegación, 
-                      sirve para hacer un menú de navegación con enlaces.-->
+                      sirve para hacer un menú de navegación con distintos enlaces.-->
                 <h1>Cac-Movies</h1> 
                 <!-- La etiqueta para definir el texto después del logo. 
                      Esta etiqueta h1 es un elemento en bloque, usa todo el ancho de la página.-->
@@ -24,7 +24,7 @@
                     <li>
                         <a href="./register.html">Registrarse</a> 
                         <!--La etiqueta a, de anchor ("ancor" o "ancla"), es para crear enlaces.
-                            En este caso, un enlace relativo a una ruta interna a un archivo dentro del proyecto.
+                            En este caso, un enlace  interno a una ruta relativa a un archivo dentro del proyecto.
                             Para hacer esto, dentro del href escribir "./" y, a continuación, la ubicación y el nombbre del archivo del enlace en nuestro directorio.-->
                     </li>
                     <li>
@@ -50,21 +50,18 @@
         </section> 
         <section id="search">
             <h2>¿Qué estás buscando?</h2>
-
         </section>
         <section id="popular">
             <h2>Las tendencias de hoy</h2>
             <div id="popular-list"> <!--Un contentedor, un divisor donde puedo agrupar distintos elementos html. La etiqueta div es un elemento en bloque.-->
-                <a href="">
-                    <img src="https://picsum.photos/200/300" alt="Foto de una película." width="200" >
+                <a href=""><img src="https://picsum.photos/200/300" alt="Foto de una película." width="200" ></a>
                     <!-- Con la etiqueta img voy a agregar una imagen, a partir del atributo src voy a especificar su ruta.
                          El atributo alt posibilita una semántica de acuerdo al usuario, 
-                         por un lado, si no carga la imagen indica el contenido de la misma, por el otro,
-                         sirve para la accesibilidad y los asistentes virtuales de las personas no videntes.-->
-                </a>
+                         por un lado, si no carga la imagen indica el contenido de la misma, 
+                         por el otro, sirve para la accesibilidad y los asistentes virtuales de las personas no videntes.-->
                 <a href="">
                     <img src="./static/img/Oppenheimer.jpg" alt="Foto de una película." width="200" >
-                    <!-- Una ruta relativa, a un archivo interno. 
+                    <!-- Una ruta relativa, en un archivo interno. 
                          Las rutas pueden ser relativas o absolutas.-->
                 </a>
                
@@ -76,12 +73,12 @@
     </main>
 
     <footer><!-- El pie de página. -->
-        <a href="">Términos y condiciones</a>  <!--Etiquetas en linea, para separarlas usar el br, la etiqueta de break. -->
-        <a href="">Preguntas frecuentes</a>
-        <a href="">Ayuda</a>
+        <a href="#">Términos y condiciones</a>  <!--Etiquetas en linea, para separarlas hay que usar el br, la etiqueta de break. -->
+        <a href="#">Preguntas frecuentes</a>
+        <a href="#">Ayuda</a>
     </footer>
 </body>
 
 <!-- <p>Con la tecla Ctrl + } comento el código VSC.</p> -->
-<!--  Usar Ctrl + x para copiar, Ctrl + v para pegar-->
+<!--  Usar Ctrl + x para cortar, Ctrl + v para pegar-->
 </html> 
