--- a/index.html
+++ b/index.html
@@ -43,10 +43,11 @@
             </nav>
     </header>  
 
-    <main><!-- El contenido principal de la página. -->
-        <section id="banner"> <!-- Genero cuatro secciones dentro del contenido principal. -->
+    <main><!-- El contenido principal de la página. 
+               Genero cuatro secciones dentro del contenido principal: -->
+        <section id="banner">
         <!-- A la primera sección la identifico con un atributo id dentro de la etiqueta section, para después trabajar con ella por medio de Javascript o CSS. -->
-            <h1>Películas y series ilimitadas y mucho más</h1> <!--Las etiquetas h1 a h6 son etiquetas para hacer títulos y subtítulos.-->
+            <h1>Películas, series ilimitadas y mucho más</h1> <!--Las etiquetas h1 a h6 son etiquetas para hacer títulos y subtítulos.-->
         </section> 
         <section id="search">
             <h2>¿Qué estás buscando?</h2>
@@ -55,10 +56,10 @@
             <h2>Las tendencias de hoy</h2>
             <div id="popular-list"> <!--Un contentedor, un divisor donde puedo agrupar distintos elementos html. La etiqueta div es un elemento en bloque.-->
                 <a href=""><img src="https://picsum.photos/200/300" alt="Foto de una película." width="200" ></a>
-                    <!-- Con la etiqueta img voy a agregar una imagen, a partir del atributo src voy a especificar su ruta.
+                    <!-- Con la etiqueta img voy a agregar una imagen, a partir del atributo src indico la ruta.
                          El atributo alt posibilita una semántica de acuerdo al usuario, 
                          por un lado, si no carga la imagen indica el contenido de la misma, 
-                         por el otro, sirve para la accesibilidad y los asistentes virtuales de las personas no videntes.-->
+                         por el otro, es para la accesibilidad del usuario y los asistentes virtuales.-->
                 <a href="">
                     <img src="./static/img/Oppenheimer.jpg" alt="Foto de una película." width="200" >
                     <!-- Una ruta relativa, en un archivo interno. 
@@ -77,8 +78,8 @@
         <a href="#">Preguntas frecuentes</a>
         <a href="#">Ayuda</a>
     </footer>
-</body>
 
+</body>
 <!-- <p>Con la tecla Ctrl + } comento el código VSC.</p> -->
 <!--  Usar Ctrl + x para cortar, Ctrl + v para pegar-->
 </html> 
