--- a/register.html
+++ b/register.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
     <title>Register</title>
+    <link rel="Cac-Movies icon" href="./static/img/favicon.ico" type="image/x-icon">
 </head>
 <body>
     <header> 
