--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
             </nav>
     </header>  
 
-    <main><!-- El contenido principal de la página. 
-               Genero cuatro secciones dentro del contenido principal: -->
+    <main><!-- El contenido principal. 
+               Generé cuatro secciones dentro del contenido de la página: -->
         <section id="banner">
         <!-- A la primera sección la identifico con un atributo id dentro de la etiqueta section, para después trabajar con ella por medio de Javascript o CSS. -->
             <h1>Películas, series ilimitadas y mucho más</h1> <!--Las etiquetas h1 a h6 son etiquetas para hacer títulos y subtítulos.-->
@@ -81,5 +81,5 @@
 
 </body>
 <!-- <p>Con la tecla Ctrl + } comento el código VSC.</p> -->
-<!--  Usar Ctrl + x para cortar, Ctrl + v para pegar-->
+<!--  Usar Control + v para copiar, Ctrl + x para cortar y Ctrl + v para pegar-->
 </html> 
