--- a/detail-movie.html
+++ b/detail-movie.html
@@ -60,9 +60,9 @@
     </main>
 
     <footer>
-        <a href="">Términos y condiciones</a>  
-        <a href="">Preguntas frecuentes</a>
-        <a href="">Ayuda</a>
+        <a href="#">Términos y condiciones</a>  
+        <a href="#">Preguntas frecuentes</a>
+        <a href="#">Ayuda</a>
     </footer>
 
 </body>
