--- a/detail-movie.html
+++ b/detail-movie.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
+<head><!--La cabecera-->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cac-Movies</title>
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-    <header> <!--La cabecera, donde voy a contener el menú de la página.-->
+    <header> <!--El encabezamiento, donde contengo el menú de la página.-->
             <nav> <!--Este elemento me va a definir un conjunto de enlaces de navegación, es para hacer un menú de navegación-->
                 <h1>Cac-Movies</h1> 
                 
