--- a/detail-movie.html
+++ b/detail-movie.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-    <header> <!--El encabezamiento, donde contengo el menú de la página.-->
+    <header> <!--El encabezado, donde contengo el menú de la página.-->
             <nav> <!--Este elemento me va a definir un conjunto de enlaces de navegación, es para hacer un menú de navegación-->
                 <h1>Cac-Movies</h1> 
                 
