--- a/detail-movie.html
+++ b/detail-movie.html
@@ -43,10 +43,10 @@
             </div>
             <div>
                 <table border="2">
-                <!-- Por otro lado, hice una tabla enmarcada. Indiqué las filas con la etiqueta tr y las columnas con la etiqueta td. -->
-                    <tbody> <!--Entonces defino el cuerpo de la tabla:-->
+                <!-- Por otro lado, hice una tabla enmarcada. Indiqué las filas con la etiqueta tr (de table row) y las columnas con la etiqueta td (de table data cell). -->
+                    <tbody> <!--Definí el cuerpo de la tabla:-->
                         <tr><td colspan="2">Info</td></tr>
-                        <!-- El atributo colspan con el valor "2" es para que una columna ocupe dos columnas,
+                        <!-- El atributo colspan con el valor "2" es para que una celda ocupe dos columnas,
                              en este caso para que no deje un espacio. -->
                         <tr><td><b>Status</b></td><td>Released</td></tr>
                         <tr><td><b>Original Language</b></td><td>English</td></tr>
