--- a/register.html
+++ b/register.html
@@ -17,11 +17,12 @@
         <section>
             <h2>Registro</h2>
             <!--Creo un formulario-->
-            <form action="#" id="formRegister" method="get">
+            <form action="#" id="formRegister" method="post">
                 <!--El atributo action es para colocar la ruta a donde vamos a enviar los datos del usuario.
                     El atributo method sirve para especificar el tipo de solicitud que le vamos a enviar al servidor (por ejemplo, post, get, put -update- o delete) .-->   
                     <div>
-                        <!-- Para especificar el nombre del campo en un formulario uso:-->
+                        <!-- Para especificar el nombre del campo en un formulario uso label, que admite el atributo for, el que debe tener el mismo valor del atributo id
+                            del campo (input, select o textarea) al que hace referencia la etiqueta:-->
                         <label for="firstname">Nombre</label>
                         <!--Para el input:-->
                         <input type="text" name="firstname" id="firstname" maxlength="10" minlength="2">
