--- a/register.html
+++ b/register.html
@@ -19,37 +19,37 @@
             <!--Creo un formulario-->
             <form action="#" id="formRegister" method="post">
                 <!--El atributo action es para colocar la ruta a donde vamos a enviar los datos del usuario.
-                    El atributo method sirve para especificar el tipo de solicitud que le vamos a enviar al servidor (por ejemplo, post, get, put -update- o delete) .-->   
+                    El atributo method sirve para especificar el tipo de solicitud que le vamos a enviar al servidor (por ejemplo, post, get, put -update- o delete). Hay que agregarlo.-->   
                     <div>
                         <!--Para especificar el nombre del campo en un formulario uso label, que admite el atributo for, el que debe tener el mismo valor del atributo id
                             del campo (input, select o textarea) al que hace referencia la etiqueta:-->
                         <label for="firstname">Nombre</label>
                         <!--Para el input:-->
                         <input type="text" name="firstname" id="firstname" maxlength="10" minlength="2">
-                                            <!--El atributo name es para que el servidor sepa cómo se llama el nombre del campo que le enviamos. Hay que agregarlo.
+                                            <!--El atributo name es para que el servidor sepa cómo se llama el nombre del campo que le enviamos. También hay que agregarlo.
                                                 El atributo for de la etiqueta label debe coincidir con el del atributo name  
                                                 porque si usamos una etiqueta label hay que relacionarla al atributo for del campo vinculado.-->
                                                 
                     </div>      
                     <div>
                         <label for="lastname">Apellido</label>
-                        <input type="text" name="lastname" id="lastname">      
+                        <input type="text" name="lastname" id="lastname" maxlength="12" minlength="2">      
                     </div>     
                     <div>
                         <label for="email">Email</label>
                         <input type="email" name="email" id="email">
                                     <!--Ojo: para evitar errores del servidor por los usuarios en este caso en el atributo type
-                                        hay que colocar el valor "email". Este atributo valida que ingresemos una dirección de correo.-->                     
+                                        hay que colocar el valor "email". Este atributo comprueba que el usuario ingrese una dirección de correo válida.-->                     
                     </div> 
                     <div>    
                         <label for="password">Contraseña</label>
-                        <input type="password" name="password" id="password">
+                        <input type="password" name="password" id="password" maxlength="12" minlength="4">
                                 <!-- En este caso, en el atributo type coloco el valor password para ocultar la contraseña del usuario.-->                     
                     </div>   
                     <div>
                         <label for="datebirth">Fecha de nacimiento</label>
                         <input type="date" name="datebirth" id="datebirth">
-                                <!-- En el atributo type, en este caso coloco el valor date para que me muestre un calendario.-->                
+                                <!-- En el atributo type, en este caso coloco el valor date para seleccionar una fecha en un calendario.-->                
                     </div>   
                     <div>
                         <label for="country">País</label>
