--- a/index.html
+++ b/index.html
@@ -5,13 +5,46 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cac-Movies</title>
 
+    <!-- La descripción de nuestra página para Google -->
+    <meta name="description" content="Películas, series ilimitadas y mucho más le presenta una selección de los contenidos multimedia más importantes de la actualidad. ">
+    <!-- Para el SEO de Google u otros buscadores, le indico a Google que entre al index y siga los enlaces-->
+    <meta name="robots" content="index, follow">
+    <!-- Para el color del navegador en la Pc o en móviles, con la relación "theme-color" y el atributo content genero el color que quiero.-->
+    <meta name="theme-color" content="#B80000">
+    
+    <!-- OPEN GRAPH:
+         Un conjunto de etiquetas que creó Facebook para que cuando compartimos contenido de nuestra página en una red social se vea correctamente:
+         Para cotejar una URL ver esto como ejemplo: https://www.opengraph.xyz -->
+
+    <meta property="og:title" content="Cac-Movies - Películas, series y mucho más.">
+    <meta property="og:description" content="Películas, series ilimitadas y mucho más le presenta una selección de los contenidos multimedia más importantes de la actualidad.">
+    <meta property="og:image" content="./img/Oppenheimer.jpg">
+    <meta property="og:image:alt" content="Una fotografía de la película Oppenheimer.">
+    <!-- Nota: Para ver más etiquetas ingresar a The Open Graph protocol, es importante compartir y renderizar correctamente en distintas plataformas nuestra página. -->
+
+    <!-- SEO -->
+
+    <!-- Para enlazar a un recurso externo alternativo a la página  -->
+    <link rel="alternate" href="#/en" hreflang="en-GB">
+    <!-- Para que el navegador detecte cuál es la página principal entre dos páginas duplicadas.  -->
+    <link rel="canonical" href="#">
+
+    <!-- Favicon: -->
     <link rel="Cac-Movies icon" href="./static/img/favicon.ico" type="image/x-icon">
     <!-- Con la etiqueta link y la relación "icon" dentro del atributo rel, podemos establecer el favicon.ico para el logo de la pestaña. -->
+
+     <!--Para enlazar el script con las hojas de estilos de CSS:--> 
+     <link rel="stylesheet" href="./css/styles.css"> 
+
+     <!--La etiqueta script me permite escribir Javascript para ejecutar algo
+     <script> 
+         console.log('Hola') 
+     </script>-->
 
 </head>
 <body>
 
-    <header> <!--La cabecera, donde contengo el menú de la página.-->
+    <header> <!--Indico la cabecera, donde contengo el menú de la página.-->
             <nav> <!--Este elemento define un conjunto de enlaces de navegación, 
                       sirve para hacer un menú de navegación con distintos enlaces.-->
                 <h1>Cac-Movies</h1> 
@@ -46,7 +79,7 @@
     <main><!-- El contenido principal. 
                Generé cuatro secciones dentro del contenido de la página: -->
         <section id="banner">
-        <!-- A la primera sección la identifico con un atributo id dentro de la etiqueta section, para después trabajar con ella por medio de Javascript o CSS. -->
+        <!-- Divido el contenido principal en secciones. A la primera sección la identifico con un atributo id para después trabajar con ella por medio de Javascript o CSS. -->
             <h1>Películas, series ilimitadas y mucho más</h1> <!--Las etiquetas h1 a h6 son etiquetas para hacer títulos y subtítulos.-->
         </section> 
         <section id="search">
