--- a/index.html
+++ b/index.html
@@ -9,22 +9,22 @@
     <meta name="description" content="Películas, series ilimitadas y mucho más le presenta una selección de los contenidos multimedia más importantes de la actualidad. ">
     <!-- Para el SEO de Google u otros buscadores, le indico a Google que entre al index y siga los enlaces-->
     <meta name="robots" content="index, follow">
-    <!-- Para el color del navegador en la Pc o en móviles, con la relación "theme-color" y el atributo content genero el color que quiero.-->
+    <!-- Para el color de la barra del navegador en la Pc o en móviles, con la relación "theme-color" y el atributo content genero el color que quiero.-->
     <meta name="theme-color" content="#B80000">
     
     <!-- OPEN GRAPH:
          Un conjunto de etiquetas que creó Facebook para que cuando compartimos contenido de nuestra página en una red social se vea correctamente:
-         Para cotejar una URL ver esto como ejemplo: https://www.opengraph.xyz -->
+         Hay etiquetas para Meta, Twitter, etc. Para cotejar una URL ver: https://www.opengraph.xyz -->
 
     <meta property="og:title" content="Cac-Movies - Películas, series y mucho más.">
     <meta property="og:description" content="Películas, series ilimitadas y mucho más le presenta una selección de los contenidos multimedia más importantes de la actualidad.">
     <meta property="og:image" content="./img/Oppenheimer.jpg">
     <meta property="og:image:alt" content="Una fotografía de la película Oppenheimer.">
-    <!-- Nota: Para ver más etiquetas ingresar a The Open Graph protocol, es importante compartir y renderizar correctamente en distintas plataformas nuestra página. -->
+    <!-- Nota: Para ver más, ingresar a "The Open Graph protocol", es importante compartir y renderizar correctamente en distintas plataformas nuestra página. -->
 
     <!-- SEO -->
 
-    <!-- Para enlazar a un recurso externo alternativo a la página  -->
+    <!-- Para enlazar a un recurso externo alternativo a la página -->
     <link rel="alternate" href="#/en" hreflang="en-GB">
     <!-- Para que el navegador detecte cuál es la página principal entre dos páginas duplicadas.  -->
     <link rel="canonical" href="#">
@@ -36,7 +36,7 @@
      <!--Para enlazar el script con las hojas de estilos de CSS:--> 
      <link rel="stylesheet" href="./css/styles.css"> 
 
-     <!--La etiqueta script me permite escribir Javascript para ejecutar algo
+     <!--La etiqueta script me permite escribir código Javascript para ejecutar algo
      <script> 
          console.log('Hola') 
      </script>-->
