--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <ul type="square">
                     <!-- Una lista de ítems desordenados.
                     El atributo type="square" es para que la lista no posea círculos y esté ordenada con cuadrados-->
-                    <li>Tendencias</li>
+                    <li><a href="#popular">Tendencias</a></li>
                     <li>
                         <a href="./register.html">Registrarse</a> 
                         <!--La etiqueta a, de anchor ("ancor" o "ancla"), es para crear enlaces.
@@ -71,7 +71,7 @@
                         El atributo target="_blank" es para que el enlace se abra en otra pestaña del navegador.
                         Y el atributo title="" sirve para que el navegador nos muestre una pequeña descripción cuando pasamos el cursor sobre el enlace.-->
                     </li>
-                    <li>Iniciar sesión</li>
+                    <li><a href="#" target="_blank">Iniciar sesión</a></li>
                 </ul>
             </nav>
     </header>  
